@@ -81,12 +81,8 @@ public abstract class Query {
 
   @Override
   public boolean equals(Object obj) {
-    if (this == obj)
-      return true;
     if (obj == null)
       return false;
-    if (getClass() != obj.getClass())
-      return false;
-    return true;
+    return getClass() == obj.getClass();
   }
 }
